# TrustMRRParser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/trustmrr_scraper/: __init__.py  cli.py  client.py  notifier.py
